# geocode-csv

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Justfile  README.md  build-zstd.rs  deny.toml
.github/workflows/: ci.yml
crates/libpostal-rust/: CHANGELOG.md  Cargo.toml  README.md
crates/libpostal-rust/src/: errors.rs  init.rs  lib.rs  probe.rs
crates/libpostal-sys/: Cargo.toml  README.md  build.rs  wrapper.h
crates/libpostal-sys/src/: bindings.rs  lib.rs
crates/metrics-exporter-newrelic/: CHANGELOG.md  Cargo.toml  README.md
crates/metrics-exporter-newrelic/src/: client.rs  errors.rs  lib.rs
crates/opinionated_metrics/: CHANGELOG.md  Cargo.toml  README.md
crates/opinionated_metrics/src/: lib.rs
src/: addresses.rs  async_util.rs  errors.rs  geocoder.rs  main.rs  memory_used.rs  pipeline.rs  server.rs  smartystreets.rs  structure.rs  unpack_vec.rs
src/geocoders/: invalid_record_skipper.rs  libpostal.rs  mod.rs  normalizer.rs  paired.rs
src/geocoders/cache/: address_words.csv  compression.rs  compression_ztd.rs  enum_words_1.csv  mod.rs
src/geocoders/smarty/: client.rs  mod.rs  structure.rs
src/key_value_stores/: bigtable.rs  mod.rs  redis.rs
supply-chain/: config.toml
tests/: duplicate_columns.rs  libpostal.rs  server.rs  specs.rs
