[package]
name = "geocode-csv"
version = "1.0.0"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "Unofficial CLI tool to bulk geocode CSV data using the SmartyStreets API"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/faradayio/geocode-csv"
documentation = "https://github.com/faradayio/geocode-csv"

[dev-dependencies]
cli_test_dir = "0.1.7"

[dependencies]
anyhow = { version = "1.0.40", features = ["backtrace"] }
csv = "1.0.7"
env_logger = "0.9.0"
futures = "0.3.4"
hyper = { version = "0.14.7", features = ["client", "http2", "stream"] }
hyper-tls = "0.5.0"
log = "0.4.6"
serde = { version = "1.0.92", features = ["derive"] }
# IMPORTANT: We require `preserve_order` to correctly handle "structure" JSON'
# specifications in a way that puts the right data in the right output columns.
serde_json = { version = "1.0.39", features = ["preserve_order"] }
structopt = "0.3.4"
strum = "0.23.0"
strum_macros = "0.23.1"
tokio = { version = "1.6.0", features = ["io-util", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.6"
url = "2.1.1"
