[package]
name = "geocode-csv"
version = "2.0.0-alpha.1"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "CLI tool to bulk geocode CSV data using the Smarty API or libpostal"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/faradayio/geocode-csv"
documentation = "https://github.com/faradayio/geocode-csv"

[dev-dependencies]
cli_test_dir = "0.1.7"

[dependencies]
anyhow = { version = "1.0.40", features = ["backtrace"] }
async-trait = "0.1.52"
bb8 = "0.7.1"
bb8-redis = "0.10.1"
bigtable_rs = "0.1.5"
bincode = { version = "2.0.0-beta.2", features = ["serde", "serde_alloc"] }
csv = "1.0.7"
futures = "0.3.4"
hyper = { version = "0.14.7", features = ["client", "http2", "stream"] }
hyper-rustls = { version = "0.23.0", features = ["rustls-native-certs", "http2"] }
libpostal-rust = { version = "0.1.0", path = "crates/libpostal-rust" }
metrics = "0.18.0"
metrics-util = "0.11.0"
# Force OpenSSL to build as part of this binary. This gives us a fighting chance
# of working without ekidd/rust-musl-builder.
openssl = { version = "0.10", features = ["vendored"] }
opinionated_metrics = { version = "0.1.0", path = "crates/opinionated_metrics" }
redis = { version = "0.21.5", default-features = false, features = ["aio", "tokio-comp"] }
serde = { version = "1.0.92", features = ["derive"] }
# IMPORTANT: We require `preserve_order` to correctly handle "structure" JSON
# specifications in a way that puts the right data in the right output columns.
serde_json = { version = "1.0.39", features = ["preserve_order"] }
sha2 = "0.10.1"
structopt = { version = "0.3.4", features = ["wrap_help"] }
strum = "0.23.0"
strum_macros = "0.23.1"
tokio = { version = "1.6.0", features = ["io-util", "macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.6"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
url = "2.1.1"

[workspace]
members = ["crates/libpostal-sys", "crates/libpostal-rust", "crates/metrics-exporter-newrelic", "crates/opinionated_metrics"]
