[package]
name = "geocode-csv"
version = "1.3.7"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

description = "CLI tool to bulk geocode CSV data using the Smarty API or libpostal"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/faradayio/geocode-csv"
documentation = "https://github.com/faradayio/geocode-csv"

[dev-dependencies]
cli_test_dir = "0.1.7"
reqwest = { version = "0.11.18", default-features = false, features = ["blocking"] }

[dependencies]
anyhow = { version = "1.0.40", features = ["backtrace"] }
async-trait = "0.1.52"
axum = { version = "0.6.19", default-features = false, features = ["http1", "tokio", "tower-log", "tracing", "headers", "json"] }
bb8 = "0.8.0"
bb8-redis = "0.12.0"
bigtable_rs = "=0.2.2"
bincode = { version = "2.0.0-rc.2", features = ["serde"] }
clap = { version = "4.3.0", features = ["derive", "wrap_help"] }
csv = "1.0.7"
futures = "0.3.4"
hyper = { version = "0.14.7", features = ["client", "http2", "stream"] }
hyper-rustls = { version = "0.23.0", features = ["rustls-native-certs", "http2"] }
leaky-bucket = "0.12.1"
libpostal-rust = { version = "0.1.1", path = "crates/libpostal-rust" }
metrics = "0.20.1"
metrics-util = "0.14.0"
opinionated_metrics = { version = "0.2.0", path = "crates/opinionated_metrics" }
redis = { version = "0.22.1", default-features = false, features = ["aio", "tokio-comp"] }
serde = { version = "1.0.92", features = ["derive"] }
# IMPORTANT: We require `preserve_order` to correctly handle "structure" JSON
# specifications in a way that puts the right data in the right output columns.
serde_json = { version = "1.0.39", features = ["preserve_order"] }
sha2 = "0.10.1"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.6.0", features = ["io-util", "macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.6"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.7", features = ["env-filter"] }
url = "2.1.1"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.3.2", features = ["profiling"], optional = true }

# [profile.release]
# debug = true
# split-debuginfo = "off"

[workspace]
members = ["crates/libpostal-sys", "crates/libpostal-rust", "crates/metrics-exporter-newrelic", "crates/opinionated_metrics"]
